# ZKCG

./: .gitignore  Cargo.toml  NOTICE.md  README.md  SECURITY.md  SPEC.md  cargo.toml
api/: Cargo.toml
api/src/: handler.rs  main.rs  models.rs
circuits/: Cargo.toml
circuits/src/: halo2_artifacts.rs  lib.rs  score_circuit.rs  tests.rs
common/: Cargo.toml
common/src/: errors.rs  lib.rs  state.rs  types.rs
halo2/prover/: Cargo.toml
halo2/prover/src/: main.rs  proof.rs
verifier/: Cargo.toml
verifier/benches/: verify.rs
verifier/src/: backend.rs  backend_halo2.rs  backend_stub.rs  backend_zkvm.rs  engine.rs  lib.rs  policy.rs  proof.rs  storage.rs  tests.rs  tests_equivalence.rs  tests_halo2.rs  tests_zkvm.rs  tests_zkvm_journal.rs
zkvm/guest/: Cargo.toml
zkvm/guest/src/: main.rs
zkvm/host/: Cargo.toml  build.rs
zkvm/host/src/: lib.rs
zkvm/prover/: Cargo.toml
zkvm/prover/src/: main.rs
