[package]
name = "verifier"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
# Optional ZK dependencies
halo2_proofs = { version = "0.3", optional = true }
ff = { version = "0.13", optional = true }
circuits = { path = "../circuits", optional = true }
zkcg-zkvm-guest = { path = "../zkvm/guest", optional = true }
zkcg-zkvm-host = { path = "../zkvm/host", optional = true }

[dev-dependencies]
rand = "0.8"

[features]
zk-halo2 = [
    "halo2_proofs",
    "ff",
    "circuits",
]
zk-vm = ["zkcg-zkvm-guest", "zkcg-zkvm-host"]