[package]
name = "verifier"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
# Optional ZK dependencies
halo2_proofs = { version = "0.3", optional = true }
ff = { version = "0.13", optional = true }
circuits = { path = "../circuits", optional = true }
zkcg-zkvm-host = { path = "../zkvm/host", optional = true, features = ["zk-vm"] }
risc0-zkvm = { version = "0.21", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
bincode = { version = "1", optional = true }

[dev-dependencies]
rand = "0.8"

[features]
zk-halo2 = [
    "halo2_proofs",
    "ff",
    "circuits",
]
zk-vm = [
  "risc0-zkvm",
  "serde",
  "bincode",
  "zkcg-zkvm-host"
  ]