[package]
name = "zkcg-zkvm-host"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
common = { path = "../../common" }
risc0-zkp = "3"
risc0-core = "3"
serde = { version = "1", features = ["derive"] }
bincode = "1"

[build-dependencies]
risc0-build = "3"

[features]
default = []
zk-vm = []

