[package]
name = "zkcg-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
# Executes the zkVM
risc0-zkvm = "3"
risc0-binfmt = "3"

# Shared types
zkcg-zkvm-host = { path = "../host" }
common = { path = "../../common" }

# Serialization
serde = { version = "1", features = ["derive"] }
bincode = "1"
